Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-9778

ll_read_ahead_pages no longer returns count of pages

XMLWordPrintable

    • 3
    • 9223372036854775807

      Patch:
      LU-7990 clio: revise readahead to support 16MB IO

      The major work is to adjust read ahead policy to issue
      read ahead RPC by underlying RPC size

      Test case is backport from Andrew Perepechko's
      "LU-7140 llite: too few 4 MiB RPCs from readahead"
      http://review.whamcloud.com/16374

      Signed-off-by: Jinshan Xiong <jinshan.xiong@intel.com>
      Signed-off-by: Gu Zheng <gzheng@ddn.com>
      Change-Id: Ib25ff37712389cca7fcee86996124e7c9dd4ec9a
      Reviewed-on: http://review.whamcloud.com/19368

      Removed 'count' from ll_read_ahead_pages, meaning it no longer returns the # of pages read. Several debug statements still try to print out # of pages read ahead, but can't.

            paf Patrick Farrell (Inactive)
            paf Patrick Farrell (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: